--- a/major/register.html
+++ b/major/register.html
@@ -28,6 +28,8 @@
         <br>
         <label for="">Confirm Password</label>
         <input type="password" name="Password" value="">
+        <br>
+        <input type="button" name="submit" value="submit">
 
 
       </form>
