--- a/major/homepage.html
+++ b/major/homepage.html
@@ -14,7 +14,7 @@
     />
 
     <!-- Linking CSS File -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/homepage.css">
     <!-- Google Fonts Start -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
