--- a/major/dashboard.html
+++ b/major/dashboard.html
@@ -18,37 +18,46 @@
     </div>
   </div>
 
-<section class= "main">
-  <div class="menuleft">
+  <section class="main">
+    <div class="menuleft">
       <!-- <div class="dashboard"> -->
       <!-- </div> -->
       <!-- <div class="option"> -->
 
       <!-- </div> -->
-      <h1>DASHBOARD</h1>
-      <h3>Company Details</h3>
-      <h3>Write Review</h3>
-      <h3>Placement stats</h3>
+      <h1 class="heading">DASHBOARD</h1>
+      <h3 class="dash">Company Details</h3>
+      <h3 class="dash">Write Review</h3>
+      <h3 class="dash">Placement stats</h3>
+      <h3 class="dash">About</h3>
+
+    </div>
+    <div class="menucenter">
+      <h1 class="companyName">List of Companies:</h1>
+      <ul class="companyName">
+        <li>Adobe</li>
+        <li>Samsung</li>
+        <li>Media.net</li>
+      </ul>
+
+    </div>
+    <div class="menuright">
+
+      <h1>pie chart</h1>
+      <br>
+      <h1>bar chart</h1>
+    </div>
+
+  </section>
+
+  <!-- footer -->
+
+  <div class="foot">
+
+    <p class="copyright">Made with ❤ by Developers</p>
+
 
   </div>
-  <div class="menucenter">
-<h1>fsd</h1>
-
-  </div>
-  <div class="menuright">
-<h1>hsldhl</h1>
-  </div>
-
-</section>
-
-<!-- footer -->
-
-<div class="foot">
-
-    <p>Made with ❤ by Developers</p>
-
-
-</div>
 
 </body>
 
