--- a/major/dashboard.html
+++ b/major/dashboard.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8">
   <title>dashboard</title>
   <link rel="stylesheet" href="css/dashboard.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous"
+    referrerpolicy="no-referrer" />
+
+  <script src="https://kit.fontawesome.com/5089963897.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -20,17 +26,16 @@
 
   <section class="main">
     <div class="menuleft">
-      <!-- <div class="dashboard"> -->
-      <!-- </div> -->
-      <!-- <div class="option"> -->
-
-      <!-- </div> -->
       <h1 class="heading">DASHBOARD</h1>
-      <h3 class="dash">Company Details</h3>
-      <h3 class="dash">Write Review</h3>
-      <h3 class="dash">Placement stats</h3>
-      <h3 class="dash">About</h3>
 
+      <ul style="list-style: none;">
+        <li class="item"><a href="#"  style="text-decoration: none; color : white"><i class="fas fa-home dash"></i> Homepage</a></li>
+        <li class="item"><a href="#"  style="text-decoration: none; color : white"><i class="fa-solid fa-magnifying-glass dash"></i> Experience</a></li>
+        <li class="item"><a href="#"  style="text-decoration: none; color : white"><i class="fa-solid fa-pencil dash"></i> Post Experience</a></li>
+        <li class="item"><a href="#"  style="text-decoration: none; color : white"><i class="fa-sharp fa-solid fa-chart-simple dash"></i> Statistics</a></li>
+        <li class="item"><a href="#"  style="text-decoration: none; color : white"><i class="fa-solid fa-book dash"></i> Resources</a></li>
+        <li class="item"><a href="#"  style="text-decoration: none; color : white"><i class="fa-solid fa-wallet dash"></i> Drive</a></li>
+      </ul>
     </div>
     <div class="menucenter">
       <h1 class="companyName">List of Companies:</h1>
@@ -39,7 +44,6 @@
         <li>Samsung</li>
         <li>Media.net</li>
       </ul>
-
     </div>
     <div class="menuright">
 
