--- a/major/navbar.html
+++ b/major/navbar.html
@@ -8,8 +8,11 @@
 
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 
   <!-- Font-awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -28,7 +31,6 @@
         <img src="images/nithlogo.png" width="20%" height="20%">
         <h2>Placement Buddy</h2>
       </div>
-
       <ul>
         <li><a href="#" style="color : white"><i class="fas fa-home"></i> Homepage</a></li>
         <li><a href="#" style="color : white"><i class="fa-solid fa-magnifying-glass"></i> Experience</a></li>
@@ -39,7 +41,20 @@
 
       </ul>
     </div>
+    <div class="profile-button">
+      <div class="dropdown">
+        <button class="btn btn-light btn-circle btn-xl" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <span class="dot"><i class="fa-solid fa-user"></i></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Username</a></li>
+          <li><a class="dropdown-item" href="#">Logout</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
+  {% block mymessage %}
+  {% endblock %}
 </body>
 
 </html>
