--- a/major/Statistics.html
+++ b/major/Statistics.html
@@ -125,8 +125,8 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
-    <script src="js/dashboardchart1.js"></script>
-    <script src="js/dashboardchart2.js"></script>
+    <script src="javascript/statisticschart1.js"></script>
+    <script src="javascripts/statisticschart2.js"></script>
 </body>
 
 </html>
