--- a/major/navbar.html
+++ b/major/navbar.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 
@@ -5,22 +6,14 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
-  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="{% static '/css/navbar.css' %}">
+  <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
-
   <!-- Font-awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-  <link rel="stylesheet" href="css/navbar.css">
-
   <title>Nav</title>
 </head>
 
@@ -28,17 +21,20 @@
   <div class="wrapper">
     <div class="sidebar">
       <div class="top">
-        <img src="images/nithlogo.png" width="20%" height="20%">
-        <h2>Placement Buddy</h2>
+        <h4>Placement Buddy</h4>
       </div>
-      <ul>
-        <li><a href="#" style="color : white"><i class="fas fa-home"></i> Homepage</a></li>
-        <li><a href="#" style="color : white"><i class="fa-solid fa-magnifying-glass"></i> Experience</a></li>
-        <li><a href="#" style="color : white"><i class="fa-solid fa-pencil"></i> Post Experience</a></li>
-        <li><a href="#" style="color : white"><i class="fa-sharp fa-solid fa-chart-simple"></i> Statistics</a></li>
-        <li><a href="#" style="color : white"><i class="fa-solid fa-book"></i> Resources</a></li>
-        <li><a href="#" style="color : white"><i class="fa-solid fa-wallet"></i> Drive</a></li>
-
+      <ul style="padding-left: 0px;">
+        <li class="nav_ele" id="home"><a href="#"><i class="fas fa-home"></i> <b class="hide">Homepage</b> </a></li>
+        <li class="nav_ele" id="exp"><a href="#"><i class="fa-solid fa-magnifying-glass"></i> <b
+              class="hide">Experiences</b></a></li>
+        <li class="nav_ele" id="post"><a href="#"><i class="fa-solid fa-pencil"></i> <b class="hide">Post
+              Experience</b></a></li>
+        <li class="nav_ele" id="statistics"><a href="#"><i class="fa-sharp fa-solid fa-chart-simple"></i> <b
+              class="hide">Statistics</b></a></li>
+        <li class="nav_ele" id="resources"><a href="#"><i class="fa-solid fa-book"></i> <b
+              class="hide">Resources</b></a></li>
+        <li class="nav_ele" id="drive"><a href="drive"><i class="fa-solid fa-wallet"></i> <b class="hide">Drive</b></a>
+        </li>
       </ul>
     </div>
     <div class="profile-button">
@@ -52,9 +48,20 @@
         </ul>
       </div>
     </div>
+    <div class="msg">
+      {% block mymessage %}
+      {% endblock %}
+    </div>
   </div>
-  {% block mymessage %}
-  {% endblock %}
+  <input type="hidden" id="state" name="state" value="{{ state }}">
 </body>
+
+<!-- JavaScript Bundle with Popper -->
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"
+  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+<script src="{% static '/js/index.js' %}"></script>
 
 </html>
