--- a/major/Homepage_after_login.html
+++ b/major/Homepage_after_login.html
@@ -62,7 +62,7 @@
         <div class="container1">
           <div class="subcont11">
             <h2>Welcome To The Placement Buddy</h2>
-            <p>Unofficial Placement Portal For NIT Hamirpur</p>
+            <p>Placement Buddy is your one stop destination for placements at NIT Hamirpur. Here you will get all the facilities regarding placement. It gives you information of placement drives, previous placement statistics, previous interview experiences, placement preparation material, resume preparation. You can register yourself and gear up for the placement season.</p>
           </div>
           <div class="subcont12">
             <img src="/images/21.jpg" alt="Picture" id="container1_image" />
@@ -70,13 +70,13 @@
         </div>
         <div class="container3">
           <div class="subcont31">
-            <img src="images/stat.jpg" alt="Picture" id="container3_image" />
+            <img src="images/interview.png" alt="Picture" id="container3_image" />
           </div>
           <div class="subcont32">
             <h2>Share Your Interivew Experience With Your Juniors</h2>
             <p>
-              Any Final or Super Final Year Student can share their interview
-              experience with us.
+              The interviews of one candidate surely helps in the interview of other. How? The interview experience helps the other candidate what to do, what not to do and how to do. So here are the previous interview experiences of candidates which you can use to better yourself.
+
             </p>
           </div>
         </div>
@@ -84,7 +84,8 @@
           <div class="subcont41">
             <h2>Presentation of Statistics of Previous Year Placements</h2>
             <p>
-              Users can check Previous Year Placement Records in Graphical Form.
+              Are you a numbers person? Here is your stop to see the statistics of the previous and current placement season. You can see how many students placed of the different branches, the mean and median package.
+
             </p>
           </div>
           <div class="subcont42">
@@ -93,13 +94,12 @@
         </div>
         <div class="container5">
           <div class="subcont51">
-            <img src="images/stat.jpg" alt="Picture" id="container5_image" />
+            <img src="images/resources (1).jpg" alt="Picture" id="container5_image" />
           </div>
           <div class="subcont52">
             <h2>Resources Oriented To Placement Preparation</h2>
             <p>
-              Any Final or Super Final Year Student can share their interview
-              experience with us.
+              Stuck in you placement prep? Don’t know what to study and from where, we present to you curated lists of various subjects, topics, domains asked in the interview. Be it DSA, CN, OOPS, DBMS, System Design, frequently asked problems. 
             </p>
           </div>
         </div>
@@ -107,11 +107,11 @@
           <div class="subcont61">
             <h2>List of Upcoming Campus Drives</h2>
             <p>
-              All the student can check the upcoming drives to be conducted Oncampus with date and Package
+              This section gives you the information of upcoming companies, their CTC, CGPI cutoffs. It gives you the benefit of managing your time to prepare for them and gather enough information about them.
             </p>
           </div>
           <div class="subcont62">
-            <img src="images/stat.jpg" alt="Picture" id="container5_image" />
+            <img src="images/upcoming_drive.jpg" alt="Picture" id="container5_image" />
           </div>
         </div>
         <div class="footer">
